Fix notice text overlap

--- a/css/category.css
+++ b/css/category.css
@@ -189,3 +189,9 @@
     width: 250px;
   }
 }
+
+@media screen and (max-width: 300px) {
+  .notice {
+    display: none;
+  }
+}
