--- a/css/header.css
+++ b/css/header.css
@@ -293,3 +293,13 @@ header .inner #hidden-menu i {
     display: none;
   }
 }
+
+@media screen and (max-width: 225px) {
+  header .inner .logo img {
+    display: none;
+  }
+
+  header .inner #hidden-menu {
+    display: none;
+  }
+}
